# spotify-search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
src/: config.rs  error.rs  grpc.rs  handlers.rs  main.rs
src/spotify/: mod.rs
