[package]
name = "spotify-search"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
tonic = "0.11"
prost = "0.13"
